# arbitrage-bot-demo

./: README.md  main.py  pyproject.toml
ai_docs/: ARCHITECTURE.md  REQUIREMENTS.md  architecture_diagram.md
arbitrage_bot/: __init__.py  main.py  orchestrator.py
arbitrage_bot/browser/: __init__.py  base.py  betmgm.py  draftkings.py
arbitrage_bot/config/: settings.py
arbitrage_bot/detection/: __init__.py  detector.py  team_mapper.py
arbitrage_bot/models/: __init__.py  arbitrage.py  odds.py  sportsbooks.py
arbitrage_bot/odds/: __init__.py  base.py  betmgm.py  draftkings.py
