[project]
name = "arbitrage-bot-demo"
version = "0.1.0"
description = "Arbitrage Sports Betting Bot - A modular system for detecting and executing arbitrage opportunities across multiple sportsbooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.13.0",
    "ruff>=0.12.10",
]
